--- a/sendit.mobile/package.json
+++ b/sendit.mobile/package.json
@@ -6,17 +6,17 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "6.1.9",
     "@react-navigation/stack": "6.3.20",
-    "@thirdweb-dev/react-native": "^0.4.10",
-    "@thirdweb-dev/react-native-compat": "^0.4.10",
+    "@thirdweb-dev/react-native": "^0.4.11",
+    "@thirdweb-dev/react-native-compat": "^0.4.11",
     "axios": "^1.6.2",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5",
     "expo": "^49.0.21",
-    "expo-auth-session": "^5.2.0",
+    "expo-auth-session": "~5.2.0",
     "expo-blur": "~12.6.0",
     "expo-linking": "~6.0.0",
     "expo-location": "~16.3.0",
-    "expo-random": "^13.4.0",
+    "expo-random": "~13.4.0",
     "expo-splash-screen": "~0.22.0",
     "expo-status-bar": "~1.7.1",
     "expo-web-browser": "~12.5.0",
@@ -26,12 +26,12 @@
     "react-native": "0.72.7",
     "react-native-crypto": "^2.2.0",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-get-random-values": "^1.10.0",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-get-random-values": "~1.10.0",
     "react-native-maps": "1.8.0",
     "react-native-mmkv": "^2.11.0",
     "react-native-randombytes": "^3.6.1",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "4.7.4",
     "react-native-screens": "~3.27.0",
     "react-native-svg": "14.0.0",
