--- a/sendit.mobile/package.json
+++ b/sendit.mobile/package.json
@@ -6,8 +6,8 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "6.1.9",
     "@react-navigation/stack": "6.3.20",
-    "@thirdweb-dev/react-native": "^0.4.12",
-    "@thirdweb-dev/react-native-compat": "^0.4.12",
+    "@thirdweb-dev/react-native": "^0.4.14",
+    "@thirdweb-dev/react-native-compat": "^0.4.14",
     "axios": "^1.6.2",
     "ethereumjs-util": "^7.1.5",
     "ethers": "^5",
@@ -28,12 +28,12 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-get-random-values": "~1.10.0",
-    "react-native-maps": "1.8.0",
+    "react-native-maps": "1.8.3",
     "react-native-mmkv": "^2.11.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^3.6.1",
-    "react-native-safe-area-context": "4.7.4",
-    "react-native-screens": "~3.27.0",
+    "react-native-safe-area-context": "4.8.0",
+    "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-toggle-element": "^2.0.1",
     "react-native-web": "0.19.9"
@@ -45,12 +45,13 @@
     "@types/react-dom": "~18.2.17",
     "@types/react-native": "~0.72.8",
     "prettier": "^3.1.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "start": "expo",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "ios:cache": "expo run:ios --no-build-cache",
     "ios:device": "expo run:ios --device",
     "ios:go": "expo start --ios",
     "web": "expo start --web",
